syntax = "proto3";
package wire;

import "common.proto";

message Peer {
    string uuid = 1;
    string username = 2;
    int32 device = 3;
    string Location = 4; // gateway ID
}

message Payload{
    uint32 msg_type = 1; // byte
    string content = 2;
    string extra = 3;
}

message ChatReq {
    string to = 1;
    bool not_store = 2;
    Payload payload = 3;
}

// server send a ack message to message sender ,tell he the msg_id and send_time generated by server
message ChatAck {
    int64 msg_id = 1;
    int64 send_time = 2;
}

message ChatPush {
    int64 msg_id = 1; // msg_id 如果为0，表示消息不存库
    string from = 2; // user_uid 
    string to = 3; //接收者 user_uid / group_uid
    int64 send_time = 4; //消息发送时间 ，纳秒
    Payload payload = 5; //消息内容
    ChatType chat_type = 6;
}

// this ack message is send by client ,not server
message ChatPushAck {
    repeated int64 msg_ids = 1;
}

message ChatSync {
    int64 msg_id = 1; //消息唯一ID
    ChatType chat_type = 2; // 1: 单聊 2:群聊
    string to = 3; //接收者 user_uid / group_uid
    DeviceType device = 4; // sender device
    int64 send_time = 5; //消息发送时间
    Payload payload = 6; //消息内容
}

message LoginReq {
    string gateway_id = 1; // ID of the gateway login at
    string peer_id = 2; // connection peer id on gateway
    string app_key = 3; // login user uid
    string username = 4; // login user uid
    DeviceType device = 5;
    string remote_ip = 6;
}

message LoginAck {
    string peer_id = 1; // connection peer id on gateway
    string user_uid = 2; // login user uid
}

message KickOut {
    string peer_id = 1;
}

message LogoutReq {
    string peer_id = 1;
}

message Loc {
    DeviceType device = 1;
    string peer_id = 2;
    string gateway_id = 3;
}

message MultiChatReq {
    repeated string receivers = 1; // 多个接收者
    ChatType chat_type = 2; // 1:单聊 2:群聊 3:临时群
    string chat_uid = 3; // null / group_uid / session_id
    Payload payload = 4; // 消息内容
}

message MultiChatPush {
    int64 msg_id = 1; // msg_id 
    string from = 2; // user_uid
    ChatType chat_type = 3; // 1:单聊 2:群聊
    string chat_uid = 4; //会话uid null / group_uid
    int64 send_time = 5; //消息发送时间 ，纳秒
    Payload payload = 6; //消息内容
}

message PushConfirm {
    repeated int64 msg_ids = 1; //确认的消息id
}

message PushConfirmAck {
    int32 affected = 1; // 影响行
}